# opencv-client

./: CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp  rc.cpp  rc.hpp  scope_guard.hpp  settings.hpp  uavobject.hpp  uavtalk.c  uavtalk.cpp  uavtalk.h  uavtalk.hpp
src/uavobjects/: accelstate.hpp  flightstatus.h  flighttelemetrystats.h  gcstelemetrystats.h  manualcontrolcommand.h
test/: argv.cpp  cam.cpp  uav.cpp
